fixed white space when zooming out

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
   display: flex;
   font-family: var(--main-font);
   color: #d8a9fa;
+  min-height: 100vh;
+  height: 100%;
 }
 
 .background-sector {
